Set up for java - tweaks